--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,11 @@
         </div>
       </div>
     </div>
+    <div class="row m-t-20">
+      <div class="col-sm-offset-2 col-sm-8 text-center">
+        <i class="fa fa-book fa-2x" aria-hidden="true"></i>
+        <button class="btn btn-primary btn-lg" (click)="showMessages()">Show message</button>
+      </div>
+    </div>
   </div>
 </div>
