--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,16 @@
     <div class="row">
       <div class="col-sm-offset-2 col-sm-8">
         <div class="jumbotron">
-          <h3 class="text-center">Sample using bootstrap font-awesome and SweetAlert2</h3>
+          <h3 class="text-center">
+            <i class="fa fa-book fa-2x" aria-hidden="true"></i>Sample using bootstrap font-awesome and SweetAlert2
+          </h3>
         </div>
       </div>
     </div>
     <div class="row m-t-20">
       <div class="col-sm-offset-2 col-sm-8 text-center">
-        <i class="fa fa-book fa-2x" aria-hidden="true"></i>
-        <button class="btn btn-primary btn-lg" (click)="showMessages()">Show message</button>
+        <button class="btn btn-success btn-lg" (click)="showMessages()">Success message</button>
+        <button class="btn btn-danger btn-lg" (click)="errorMessage()">Error messages</button>
       </div>
     </div>
   </div>
